# cs3210-lab

./: .gitignore
boot/src/: init.rs  main.rs
kern/: Makefile
kern/src/: allocator.rs  console.rs  fs.rs  init.rs  main.rs  mutex.rs  shell.rs
kern/src/allocator/: bin.rs  bump.rs  tests.rs  util.rs
kern/src/init/: panic.rs
lib/fat32/src/: mbr.rs
lib/fat32/src/traits/: block_device.rs
lib/fat32/src/vfat/: dir.rs  ebpb.rs  entry.rs
lib/pi/src/: common.rs  gpio.rs  lib.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs  no_std.rs
lib/stack-vec/src/: lib.rs  tests.rs
lib/ttywrite/: Cargo.toml  test.sh
lib/ttywrite/src/: main.rs  parsers.rs
lib/xmodem/src/: lib.rs
tut/1-blinky/phase4/src/: main.rs
